objects/Product2.object
<CustomObject>
    <fields>
        <fullName>Amortization__c</fullName>
        <description>Different types</description>
        <label>Amortization</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>30 YR FIXED</fullName>
                </value>
                <value>
                    <fullName>25 YR FIXED</fullName>
                </value>
                <value>
                    <fullName>20 YR FIXED</fullName>
                </value>
                <value>
                    <fullName>15 YR FIXED</fullName>
                </value>
                <value>
                    <fullName>5 YR ARM</fullName>
                </value>
                <value>
                    <fullName>7 YR ARM</fullName>
                </value>
                <value>
                    <fullName>10 YR ARM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cashout__c</fullName>
        <description>Cash-out options</description>
        <label>Cash-out</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chapter_13_Bankruptcy_Seasoning__c</fullName>
        <description>Seasoning for bankruptcy type 13</description>
        <label>Chapter 13 Bankruptcy Seasoning</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chapter_711_Bankruptcy_Seasoning__c</fullName>
        <description>Seasoning for bankruptcy type 7/11</description>
        <label>Chapter 7/11 Bankruptcy Seasoning</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Time_HomeBuyer_Restrictions__c</fullName>
        <description>Restrictions liked to first time homebuyer</description>
        <label>First Time HomeBuyer Restrictions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Foreclosure_Short_Sale_Deedinlieu__c</fullName>
        <label>Foreclosure, Short Sale, Deed-in-lieu</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gift_Funds__c</fullName>
        <description>Are gift funds allowed or not</description>
        <label>Gift Funds</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes after Buyer 5% DP</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <label>Group</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Revenue</fullName>
                </value>
                <value>
                    <fullName>Expense</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Income_Documentation__c</fullName>
        <description>Type of documentation required for income verification</description>
        <label>Income Documentation</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>W2</fullName>
                </value>
                <value>
                    <fullName>Alt doc</fullName>
                </value>
                <value>
                    <fullName>Full doc</fullName>
                </value>
                <value>
                    <fullName>Personal Bank Statement</fullName>
                </value>
                <value>
                    <fullName>Business Bank Statement</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Max_CLTV__c</fullName>
        <description>Maximum combined Loan to Value level</description>
        <label>Max CLTV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Max_DTI__c</fullName>
        <description>Could range from 35% to 50%</description>
        <label>Max DTI</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Max_LTV__c</fullName>
        <description>Maximum Loan to Value level</description>
        <label>Max LTV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Max_Loan_Size__c</fullName>
        <description>Maximum loan size</description>
        <label>Max Loan Size</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Max_Unison_DP__c</fullName>
        <description>Maximum down payment provided by unison</description>
        <label>Max Unison DP</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>10%</fullName>
                </value>
                <value>
                    <fullName>12.5%</fullName>
                </value>
                <value>
                    <fullName>15%</fullName>
                </value>
                <value>
                    <fullName>20%</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Max_Units__c</fullName>
        <description>Maximum number of units in one property</description>
        <label>Max Units</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>1-2</fullName>
                </value>
                <value>
                    <fullName>1-4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Min_FICO__c</fullName>
        <description>FICO score</description>
        <label>Min FICO</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Min_Loan_Size__c</fullName>
        <description>Minimum loan size</description>
        <label>Min Loan Size</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Minimum_Buyer_DP__c</fullName>
        <description>Minimum down payment provided by the buyer</description>
        <label>Minimum Buyer DP</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>5%</fullName>
                </value>
                <value>
                    <fullName>10%</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mortgage_Payment_History__c</fullName>
        <description>Mortgage Payment History</description>
        <label>Mortgage Payment History</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Occupancy__c</fullName>
        <description>Occupancy status</description>
        <label>Occupancy</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Primary residence</fullName>
                </value>
                <value>
                    <fullName>Second home</fullName>
                </value>
                <value>
                    <fullName>Investment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Other_Notes__c</fullName>
        <description>Supplemental Notes</description>
        <label>Other Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_ID__c</fullName>
        <formula>Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Name__c</fullName>
        <description>Partner Program Name</description>
        <label>Program Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Type__c</fullName>
        <description>Type of property</description>
        <label>Property Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SFR</fullName>
                </value>
                <value>
                    <fullName>PUD</fullName>
                </value>
                <value>
                    <fullName>Townhouse</fullName>
                </value>
                <value>
                    <fullName>Condo</fullName>
                </value>
                <value>
                    <fullName>Non-warrantable</fullName>
                </value>
                <value>
                    <fullName>2 units</fullName>
                </value>
                <value>
                    <fullName>Rural properties</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Refinance__c</fullName>
        <description>Allowing refinance</description>
        <label>Refinance</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Not at this time</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reserves__c</fullName>
        <description>level of reserves needed</description>
        <label>Reserves</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Revenue</fullName>
                </value>
                <value>
                    <fullName>Government Fee</fullName>
                </value>
                <value>
                    <fullName>Property Report Fee</fullName>
                </value>
                <value>
                    <fullName>Attorney Fee</fullName>
                </value>
                <value>
                    <fullName>Escrow Fee</fullName>
                </value>
                <value>
                    <fullName>Fee Waiver</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unison_DP_Share__c</fullName>
        <description>Maximum Unison Percentage share</description>
        <label>Unison DP Share</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>50%</fullName>
                </value>
                <value>
                    <fullName>70%</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>AllProducts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Products</label>
    </listViews>
    <listViews>
        <fullName>All_Fee_Products</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>Type__c</columns>
        <columns>Group__c</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>PRODUCT2.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.RECORD_TYPE</field>
            <operation>equals</operation>
            <value>Product2.Fee</value>
        </filters>
        <label>All Fee Products</label>
    </listViews>
    <listViews>
        <fullName>Fee_List</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>Group__c</columns>
        <columns>Type__c</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.NAME</field>
            <operation>contains</operation>
            <value>Fee</value>
        </filters>
        <label>Fee List</label>
    </listViews>
    <listViews>
        <fullName>Investor_Products</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.RECORD_TYPE</field>
            <operation>equals</operation>
            <value>Product2.Investor</value>
        </filters>
        <label>Investor Products</label>
    </listViews>
    <recordTypes>
        <fullName>Fee</fullName>
        <active>true</active>
        <label>Fee</label>
    </recordTypes>
    <recordTypes>
        <fullName>Investor</fullName>
        <active>true</active>
        <description>Investor</description>
        <label>Investor</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>